src/App.css
.app {
  background-color: #93B6C9;
  height: 97vh;
  width: 99vw;
}

.header {
  position: fixed;
  height: 30px;
  width: 99vw;
  background-color: #101827;
  padding: 5px 5px;
  display: flex;
  flex-direction: row;
  align-items: center;

}

.header .title {
  flex: auto;
  color: #ffffff;
  font-weight: bold;
  text-align: center;
}

.header .logo {
  height: 30px;
  width: 30px;
}

.map {
  height: 10%;
  width: auto;
}

.slider-container {
  position: fixed;
  top: 84%;
  width: 500px;
  height: 60px;
  margin-left: 35%;
  background-color: #101827;
  padding: 4px 8px;
  border: 1px solid #ccc;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  border-radius: 8px;
}

.toggle {
  width: 140px;
  height: 40px;
  top:100px;
  right: 20px;
  position: absolute;
  background-color: #242e41;
  border: 5px solid #101827;
  border-radius: 25px;
}

.toggle .slider {
  color: #ffffff;
  flex: 1
}

.footer {
  position: fixed;
  background-color: #101827;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 99vw;
  height: 50px;
}

.zoom {
  display: flex;
  position: absolute;
  top: 180px;
  right: 20px;
  height: 40px;
  width: 80px;
  background-color: #101827;
  border-radius: 10px;
}

.zoom .button {
  flex: 1;
  margin: 5%;
  color: white;
  font-weight: bolder;
  background-color: #374151;
  border-radius: 10px;
}

